## Process this file with automake to produce Makefile.in -*-Makefile-*-

REGISTER = \
     register/index.roc \
     register/register-notes.inc \
     register/register.xml \
     register/register.css \
     register/register.js

dist_htdocs_DATA = \
    bedrock-rest-framework.jroc \
    error.roc \
    fancy-error.roc \
    itworks.rock \
    index.rock \
    notworking.html \
    not-found.html \
    unit_test.rock \
    $(REGISTER)
