## Process this file with automake to produce Makefile.in -*-Makefile-*-

dist_img_DATA = \
    left_tab_black.gif \
    left_tab_blue.gif \
    left_tab.gif \
    left_tab_purple.gif \
    left_tab_red.gif \
    one.gif \
    right_tab_black.gif \
    right_tab_blue.gif \
    right_tab_darkred.gif \
    right_tab.gif \
    right_tab_purple.gif \
    right_tab_red.gif \
    bedbug.jpg \
    bedrock.jpg \
    bedrock.png \
    bedrock.gif \
    br_lcap.gif \
    br_rcap.gif
