## Process this file with automake to produce Makefile.in -*-Makefile-*-

dist_img_DATA = \
    bedbug.jpg \
    bedrock.gif \
    bedrock.jpg \
    bedrock.png \
    br_lcap.gif \
    br_rcap.gif \
    left_tab.gif \
    left_tab_black.gif \
    left_tab_blue.gif \
    left_tab_purple.gif \
    left_tab_red.gif \
    one.gif \
    right_tab.gif \
    right_tab_black.gif \
    right_tab_blue.gif \
    right_tab_darkred.gif \
    right_tab_purple.gif \
    right_tab_red.gif \
    caveman.png \
    not-found.png
