
## Process this file with automake to produce Makefile.in -*-Makefile-*-

dist_bedrock_include_DATA = \
    bedrock-docs-blms.inc \
    bedrock-docs-error.inc \
    bedrock-docs-hash-dump.inc \
    bedrock-docs-index.inc \
    bedrock-docs-header.inc \
    bedrock-docs-listing.inc \
    bedrock-docs-listing-index.inc \
    bedrock-docs-plugins.inc \
    bedrock-docs-ul.inc
